src/snapshots/matcha__renderer__test__render_function.snap
---
source: src/renderer.rs
expression: "{> fn classes()\na b c d\n{> endfn\nHello world"
---
// DO NOT EDIT: Code generated by matcha from -test-

import gleam/string_tree.{type StringTree}

fn classes() -> StringTree {
    let builder = string_tree.from_string("")
    let builder = string_tree.append(builder, "a b c d")

    builder
}

pub fn render_builder() -> StringTree {
    let builder = string_tree.from_string("")
    let builder = string_tree.append(builder, "Hello world")

    builder
}

pub fn render() -> String {
    string_tree.to_string(render_builder())
}
