src/snapshots/matcha__renderer__test__render_function_with_arg_and_usage.snap
---
source: src/renderer.rs
expression: "{> fn full_name(second_name: String)\nLucy {{ second_name }}\n{> endfn\nHello {[ full_name(\"Gleam\") ]}"
---
// DO NOT EDIT: Code generated by matcha from -test-

import gleam/string_tree.{type StringTree}

fn full_name(second_name: String) -> StringTree {
    let builder = string_tree.from_string("")
    let builder = string_tree.append(builder, "Lucy ")
    let builder = string_tree.append(builder, second_name)

    builder
}

pub fn render_builder() -> StringTree {
    let builder = string_tree.from_string("")
    let builder = string_tree.append(builder, "Hello ")
    let builder = string_tree.append_tree(builder, full_name("Gleam"))

    builder
}

pub fn render() -> String {
    string_tree.to_string(render_builder())
}
