src/snapshots/matcha__renderer__test__render_multiline.snap
---
source: src/renderer.rs
expression: "{> with my_list as List(String)\n<ul>\n{% for entry in my_list %}\n    <li>{{ entry }}</li>\n{% endfor %}\n</ul>"
snapshot_kind: text
---
// DO NOT EDIT: Code generated by matcha from -test-

import gleam/string_tree.{type StringTree}
import gleam/list



pub fn render_tree(my_list my_list: List(String)) -> StringTree {
    let tree = string_tree.from_string("")
    let tree = string_tree.append(tree, "<ul>
")
    let tree = list.fold(my_list, tree, fn(tree, entry) {
            let tree = string_tree.append(tree, "
    <li>")
    let tree = string_tree.append(tree, entry)
    let tree = string_tree.append(tree, "</li>
")

        tree
})
    let tree = string_tree.append(tree, "
</ul>")

    tree
}

pub fn render(my_list my_list: List(String)) -> String {
    string_tree.to_string(render_tree(my_list: my_list))
}
