src/snapshots/matcha__renderer__test__render_nested_if_statements.snap
---
source: src/renderer.rs
expression: "{> with is_user as Bool\n{> with is_admin as Bool\nHello {% if is_user %}{% if is_admin %}Admin{% else %}User{% endif %}{% endif %}"
snapshot_kind: text
---
// DO NOT EDIT: Code generated by matcha from -test-

import gleam/string_tree.{type StringTree}



pub fn render_tree(is_user is_user: Bool, is_admin is_admin: Bool) -> StringTree {
    let tree = string_tree.from_string("")
    let tree = string_tree.append(tree, "Hello ")
    let tree = case is_user {
        True -> {
                let tree = case is_admin {
        True -> {
                let tree = string_tree.append(tree, "Admin")

            tree
        }
        False -> {
                let tree = string_tree.append(tree, "User")

            tree
        }
}

            tree
        }
        False -> {
            
            tree
        }
}

    tree
}

pub fn render(is_user is_user: Bool, is_admin is_admin: Bool) -> String {
    string_tree.to_string(render_tree(is_user: is_user, is_admin: is_admin))
}
