src/snapshots/matcha__renderer__test__repeated_identifier_usage.snap
---
source: src/renderer.rs
expression: "{> with name as String\n{{ name }} usage, {{ name }} usage"
---
// DO NOT EDIT: Code generated by matcha from -test-

import gleam/string_tree.{type StringTree}



pub fn render_builder(name name: String) -> StringTree {
    let builder = string_tree.from_string("")
    let builder = string_tree.append(builder, name)
    let builder = string_tree.append(builder, " usage, ")
    let builder = string_tree.append(builder, name)
    let builder = string_tree.append(builder, " usage")

    builder
}

pub fn render(name name: String) -> String {
    string_tree.to_string(render_builder(name: name))
}
